...
                                crossAxisAlignment: CrossAxisAlignment.start,
                                mainAxisAlignment:
                                    MainAxisAlignment.spaceBetween,
                                children: [
                                  Expanded(
                                    child: FunTile(
                                      titleBig: 'Give',
                                      iconPath:
                                          'assets/family/images/give_tile.svg',
                                      backgroundColor: Theme.of(
                                        context,
                                      ).colorScheme.onSecondary,
                                      borderColor: Theme.of(
...
                                      ),
                                    ),
                                  ),
                                  const SizedBox(width: 16),
                                  Expanded(
                                    child: FunTile(
                                      titleBig: 'Find Charity',
                                      iconPath:
                                          'assets/family/images/find_tile.svg',
                                      backgroundColor: FunTheme.of(context).primary98,
                                      borderColor: Theme.of(
                                        context,
                                      ).colorScheme.primaryContainer,
...
