...
          button: FunButton(
            onTap: () {
              Navigator.of(context).pushReplacement(
                PassThePhone.toSuperhero(widget.superhero).toRoute(context),
              );
            },
            text: 'Next',
            analyticsEvent: AnalyticsEvent(
              AmplitudeEvents.reflectAndShareRulesNextClicked,
            ),
          ),
        ),
      ),
...
